bugfixes: double quotes and aligncenter

--- a/style.css
+++ b/style.css
@@ -949,7 +949,7 @@ article .wp-post-image {
 }
 .aligncenter {
 	margin: 1em auto; 
-	display: inline;
+	display: block;
 }
 
 /* Gallery Styling */
